# wgman-migration

./: Cargo.toml  deploy_postgres.sh
migrations/: 20200120000000_wgman.sql
src/: main.rs
