[package]
name = "wgman-migration"
version = "0.1.0"
authors = ["ashley"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.4.2", features = [ "runtime-tokio-rustls", "uuid", "ipnetwork", "postgres", "migrate" ] }
tokio = { version = "0.2", features = ["full"] }
wgman = { path = "../wgman" }
