[package]
name = "wgman-migration"
version = "0.1.0"
authors = ["ashley"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { git = "https://github.com/launchbadge/sqlx.git", features = [ "runtime-tokio-rustls", "uuid", "ipnetwork", "postgres" ] }
tokio = { version = "1.0", features = ["full"] }
# wgman-core = { git = "https://github.com/wash2/wgman-core.git" }
wgman-core = { path = "../wgman-core" }
