[package]
name = "wgman-migration"
version = "0.1.0"
authors = ["ashley"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.4", features = [ "runtime-tokio-rustls", "uuid", "ipnetwork", "postgres" ] }
# sqlx = { git = "https://github.com/launchbadge/sqlx.git", features = [ "runtime-tokio-rustls", "uuid", "ipnetwork", "postgres" ] }
# tokio = { version = "1.0", features = ["full"] }
tokio = { version = "0.2", features = ["full"] }
# wgman-core = { path = "../wgman-core" }
wgman-core = "0.1"
